hphp/hack/test/typecheck/string_no_members.php
<?hh

function f(string $s) : void {
  string::class;
  string::T;
  string::m();
  $s->length();
}
